--- a/app/src/main/res/layout/item_home_food.xml
+++ b/app/src/main/res/layout/item_home_food.xml
@@ -2,9 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/home_food_stroke"
-    android:layout_marginHorizontal="20dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
