--- a/app/src/main/res/layout/item_home_today_food.xml
+++ b/app/src/main/res/layout/item_home_today_food.xml
@@ -1,49 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_marginHorizontal="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/home_today_food_stroke"
-    android:layout_marginHorizontal="20dp"
-    android:layout_marginTop="18dp"
     >
 
-    <TextView
-        android:id="@+id/today_day"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2022년 10월 4일 화요일"
-        android:textSize="14sp"
-        android:fontFamily="@font/notosans_regular"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="23dp"
-        android:layout_marginTop="15dp"/>
+    <View
+        android:id="@+id/home_lunch_a_v"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/home_today_food_stroke"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/today_line_iv"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/today_tv"
-        android:text="중식"
-        android:textSize="14sp"
-        android:textColor="@color/main_color"
-        android:fontFamily="@font/notosans_regular"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/today_day_lunch_a"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="23dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/home_food_stroke_category"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/week_food_lunch_a_v"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="11dp"
+            android:paddingVertical="4dp"
+            android:text="중식A"
+            android:textColor="@color/sub_color"
+            android:textSize="14sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <TextView
         android:id="@+id/today_food_1"
-        android:text="순두부 찌개 "
+        android:textColor="#717171"
+        android:text="베이컨김치볶음밥 후라이 맑은우동국물 피쉬앤칩스 케찹 단무지 배추김치"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosans_regular"
         android:textAlignment="center"
-        android:paddingHorizontal="10dp"
+        android:paddingHorizontal="38dp"
+        android:layout_marginTop="3dp"
         android:breakStrategy="high_quality"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/today_day"
+        app:layout_constraintTop_toBottomOf="@+id/today_day_lunch_a"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
@@ -56,9 +68,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/today_food_1"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="3dp"
+        android:paddingBottom="13dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/today_good_cl"
@@ -68,6 +80,283 @@
         app:layout_constraintTop_toTopOf="@id/today_line_iv"
         app:layout_constraintBottom_toBottomOf="@id/today_line_iv"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:paddingBottom="13dp"
+        >
+
+        <TextView
+            android:id="@+id/today_lunch_a_good_tv"
+            android:text="맛있어요 "
+            android:textSize="12sp"
+            android:fontFamily="@font/notosans_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <ImageView
+            android:id="@+id/today_lunch_a_good_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_good"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/today_lunch_a_good_tv"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="12dp"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/today_hate_cl_lunch_a"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/today_line_iv"
+        app:layout_constraintTop_toTopOf="@id/today_line_iv"
+        app:layout_constraintBottom_toBottomOf="@id/today_line_iv"
+        android:paddingBottom="13dp"
+        app:layout_constraintRight_toRightOf="parent"
+        >
+
+        <TextView
+            android:id="@+id/today_lunch_a_hate_tv"
+            android:text="맛없어요 "
+            android:textSize="12sp"
+            android:fontFamily="@font/notosans_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <ImageView
+            android:id="@+id/today_lunch_a_hate_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_hate"
+            app:layout_constraintLeft_toRightOf="@id/today_lunch_a_hate_tv"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="12dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <View
+        android:id="@+id/home_lunch_b_v"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/home_today_food_stroke"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/today_lunch_b_line_iv"
+        app:layout_constraintTop_toBottomOf="@id/home_lunch_a_v"
+        android:layout_marginTop="20dp"
+         />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/today_day_lunch_b"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/home_food_stroke_category"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/home_lunch_b_v">
+
+        <TextView
+            android:id="@+id/week_food_lunch_b_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="11dp"
+            android:paddingVertical="4dp"
+            android:text="중식B"
+            android:textColor="@color/sub_color"
+            android:textSize="14sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <TextView
+        android:id="@+id/today_food_lunch_b"
+        android:text="베이컨김치볶음밥 후라이 맑은우동국물 피쉬앤칩스 케찹 단무지 배추김치"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:textColor="#717171"
+        android:textAlignment="center"
+        android:paddingHorizontal="38dp"
+        android:layout_marginTop="3dp"
+        android:breakStrategy="high_quality"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/today_day_lunch_b"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/today_lunch_b_line_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_line_4"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/today_food_lunch_b"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="3dp"
+        android:paddingBottom="13dp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/today_good_cl_lunch_b"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/today_lunch_b_line_iv"
+        app:layout_constraintTop_toTopOf="@id/today_lunch_b_line_iv"
+        app:layout_constraintBottom_toBottomOf="@id/today_lunch_b_line_iv"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:paddingBottom="13dp"
+        >
+
+        <TextView
+            android:id="@+id/today_lunch_b_good_tv"
+            android:text="맛있어요 "
+            android:textSize="12sp"
+            android:fontFamily="@font/notosans_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <ImageView
+            android:id="@+id/today_lunch_b_good_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_good"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/today_lunch_b_good_tv"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="12dp"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/today_hate_cl_lunch_b"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/today_lunch_b_line_iv"
+        app:layout_constraintTop_toTopOf="@id/today_lunch_b_line_iv"
+        app:layout_constraintBottom_toBottomOf="@id/today_lunch_b_line_iv"
+        android:paddingBottom="13dp"
+        app:layout_constraintRight_toRightOf="parent"
+        >
+
+        <TextView
+            android:id="@+id/today_lunch_b_hate_tv"
+            android:text="맛없어요 "
+            android:textSize="12sp"
+            android:fontFamily="@font/notosans_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <ImageView
+            android:id="@+id/today_lunch_b_hate_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_hate"
+            app:layout_constraintLeft_toRightOf="@id/today_lunch_b_hate_tv"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="12dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:id="@+id/home_afternoon_v"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/home_today_food_stroke"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/today_line_iv_afternoon"
+        app:layout_constraintTop_toBottomOf="@id/home_lunch_b_v"
+        android:layout_marginTop="20dp"
+        />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/today_day_afternoon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/home_food_stroke_category"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/home_afternoon_v">
+
+        <TextView
+            android:id="@+id/week_food_afternoon_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="4dp"
+            android:text="석식"
+            android:includeFontPadding="false"
+            android:fontFamily="@font/notosans_regular"
+            android:textFontWeight="500"
+            android:textColor="@color/sub_color"
+            android:textSize="14sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <TextView
+        android:id="@+id/today_food_afternoon"
+        android:text="베이컨김치볶음밥 후라이 맑은우동국물 피쉬앤칩스 케찹 단무지 배추김치"
+        android:layout_width="wrap_content"
+        android:textColor="#717171"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:textAlignment="center"
+        android:paddingHorizontal="38dp"
+        android:layout_marginTop="3dp"
+        android:breakStrategy="high_quality"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/today_day_afternoon"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/today_line_iv_afternoon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_line_4"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/today_food_afternoon"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="3dp"
+        android:paddingBottom="13dp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/today_good_cl_afternoon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/today_line_iv_afternoon"
+        app:layout_constraintTop_toTopOf="@id/today_line_iv_afternoon"
+        app:layout_constraintBottom_toBottomOf="@id/today_line_iv_afternoon"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:paddingBottom="13dp"
         >
 
         <TextView
@@ -99,9 +388,10 @@
         android:id="@+id/today_hate_cl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/today_line_iv"
-        app:layout_constraintTop_toTopOf="@id/today_line_iv"
-        app:layout_constraintBottom_toBottomOf="@id/today_line_iv"
+        app:layout_constraintLeft_toRightOf="@id/today_line_iv_afternoon"
+        app:layout_constraintTop_toTopOf="@id/today_line_iv_afternoon"
+        app:layout_constraintBottom_toBottomOf="@id/today_line_iv_afternoon"
+        android:paddingBottom="13dp"
         app:layout_constraintRight_toRightOf="parent"
         >
 
@@ -128,5 +418,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
