--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,61 +7,171 @@
     tools:context=".ui.view.food.HomeFragment"
     android:id="@+id/fragment_home">
 
-    <View
-        android:id="@+id/home_top_v"
+
+
+<!--    <ImageView-->
+<!--        android:id="@+id/home_logo"-->
+<!--        android:layout_width="77dp"-->
+<!--        android:layout_height="59dp"-->
+<!--        android:src="@drawable/ic_white_logo"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/home_top_v"-->
+<!--        android:layout_marginVertical="10dp"-->
+<!--        />-->
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:background="@drawable/home_background_top"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <View
+                    android:id="@+id/home_top_v"
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:background="@drawable/home_background_top"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+        <!--    <ImageView-->
+        <!--        android:id="@+id/home_week_ic_bt"-->
+        <!--        android:layout_width="wrap_content"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_marginLeft="20dp"-->
+        <!--        android:src="@drawable/ic_calendar__1_"-->
+        <!--        app:layout_constraintBottom_toBottomOf="@+id/home_top_tv"-->
+        <!--        app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--        app:layout_constraintTop_toTopOf="@+id/home_top_tv" />-->
+
+                <TextView
+                    android:id="@+id/home_top_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosans_regular"
+                    android:text="오늘의 학식"
+                    android:textColor="@color/white"
+                    android:textFontWeight="700"
+                    android:textSize="16sp"
+                    android:layout_marginTop="27dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <ImageView
+                    android:id="@+id/home_banner_iv"
+                    android:visibility="gone"
+                    android:layout_marginTop="-10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="15dp"
+                    android:background="@drawable/ic_home_banner"
+                    app:layout_constraintTop_toBottomOf="@id/home_top_v"/>
+
+
+
+                <TextView
+                    android:id="@+id/home_today_food_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="오늘의 학식 │  "
+                    android:textSize="20sp"
+                    android:textFontWeight="700"
+                    android:textColor="#033DAB"
+                    android:fontFamily="@font/notosans_regular"
+                    app:layout_constraintTop_toBottomOf="@id/home_banner_iv"
+                    app:layout_constraintLeft_toLeftOf="@+id/home_banner_iv"
+                    />
+
+                <TextView
+                    android:id="@+id/home_today_date_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="11월 19일"
+                    android:textSize="20sp"
+                    android:textFontWeight="700"
+                    android:textColor="#033DAB"
+                    android:fontFamily="@font/notosans_regular"
+                    app:layout_constraintTop_toBottomOf="@id/home_banner_iv"
+                    app:layout_constraintLeft_toRightOf="@+id/home_today_food_tv"
+                    />
+
+                <ImageView
+                    android:id="@+id/home_today_arrow_right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="22dp"
+                    android:src="@drawable/home_arrow_right"
+                    app:layout_constraintBottom_toBottomOf="@+id/home_today_date_tv"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/home_banner_iv" />
+
+                <ImageView
+                    android:id="@+id/home_today_arrow_left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="30dp"
+                    android:src="@drawable/home_arrow_left"
+                    app:layout_constraintBottom_toBottomOf="@+id/home_today_date_tv"
+                    app:layout_constraintEnd_toStartOf="@+id/home_today_arrow_right"
+                    app:layout_constraintTop_toBottomOf="@id/home_banner_iv" />
+
+
+                <TextView
+                    android:id="@+id/home_time_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_time_tv"
+                    android:textSize="11sp"
+                    android:layout_marginTop="-16dp"
+                    android:textFontWeight="700"
+                    android:textColor="#4E4E4E"
+                    android:fontFamily="@font/notosans_regular"
+                    app:layout_constraintTop_toBottomOf="@id/home_today_food_tv"
+                    app:layout_constraintLeft_toLeftOf="@+id/home_banner_iv"
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--    <androidx.recyclerview.widget.RecyclerView-->
+    <!--        android:id="@+id/rv_today_search_result"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        android:scrollbars="vertical"-->
+    <!--        app:layout_constraintBottom_toTopOf="@id/bt"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/home_time_tv"-->
+    <!--        android:layout_marginTop="10dp"-->
+    <!--        android:layout_marginBottom="10dp"-->
+    <!--        />-->
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager2"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        app:layout_constraintTop_toBottomOf="@id/home_time_tv"
+        android:layout_marginTop="10dp"/>
+
+
+    <me.relex.circleindicator.CircleIndicator3
+        android:id="@+id/indicator"
+        app:ci_drawable="@drawable/indicator"
+        app:ci_drawable_unselected="@drawable/indicator_un"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:ci_height="7dp"
+        app:ci_width="7dp"
+        app:ci_margin="8dp"
+        app:layout_constraintTop_toBottomOf="@id/view_pager2"
         />
 
-    <ImageView
-        android:id="@+id/home_week_ic_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_calendar__1_"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/home_logo"
-        app:layout_constraintBottom_toBottomOf="@id/home_logo"
-        android:layout_marginLeft="20dp"/>
-
-    <ImageView
-        android:id="@+id/home_logo"
-        android:layout_width="77dp"
-        android:layout_height="59dp"
-        android:src="@drawable/ic_white_logo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/home_top_v"
-        android:layout_marginVertical="10dp"
-        />
-
-    <TextView
-        android:id="@+id/home_today_food_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/home_today_tv"
-        android:textSize="18sp"
-        android:layout_marginTop="12dp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/notosans_regular"
-        app:layout_constraintTop_toBottomOf="@id/home_top_v"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_today_search_result"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@id/bt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/home_today_food_tv"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        />
-
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/today_not_food_cl"
@@ -69,6 +179,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/home_today_food_stroke"
         android:visibility="invisible"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -102,26 +213,83 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="10dp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/bt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="주간 식단 확인하러 가기"
-        android:fontFamily="@font/notosans_regular"
-        android:textSize="14sp"
-        android:background="@drawable/home_food_button"
-        android:paddingVertical="6dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginHorizontal="69dp"
-        android:layout_marginBottom="20dp"
-        />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/bt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/week_food_layout"
+                    android:layout_marginHorizontal="70dp"
+                    android:layout_marginTop="40dp"
+                    android:paddingStart="15dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent">
 
+                    <TextView
+                        android:id="@+id/item_food_detail_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosans_regular"
+                        android:paddingVertical="8dp"
+                        android:text="학식에 대한 의견 남기기"
+                        android:textFontWeight="700"
+                        android:textColor="@color/white"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textSize="14sp"
+                        />
+
+
+                    <ImageView
+                        android:id="@+id/item_food_detail_iv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_group_339"
+                        android:layout_marginEnd="7dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/item_food_detail_tv"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/item_food_detail_iv_line"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/home_today_review_line"
+                        android:layout_marginEnd="7dp"
+                        android:paddingTop="13dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/item_food_detail_tv"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--        <androidx.appcompat.widget.AppCompatButton-->
+<!--            android:id="@+id/bt2"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="학식에 대한 의견 남기d기"-->
+<!--            android:fontFamily="@font/notosans_regular"-->
+<!--            android:textSize="14sp"-->
+<!--            android:background="@drawable/home_food_button"-->
+<!--            android:paddingVertical="6dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            android:layout_marginHorizontal="69dp"-->
+<!--            android:layout_marginBottom="20dp"-->
+<!--            />-->
+<!--                -->
+
+<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
