--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,13 +7,35 @@
     tools:context=".ui.view.search.SearchFragment"
     android:id="@+id/fragment_search">
 
+<!--    <View-->
+<!--        android:id="@+id/search_top_v"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="78dp"-->
+<!--        android:background="@drawable/home_background_top"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        />-->
+
+
+
+<!--    <TextView-->
+<!--        android:id="@+id/search_top_tv"-->
+<!--        android:text="명지맛집"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:fontFamily="@font/notosans_regular"-->
+<!--        android:textFontWeight="700"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/search_top_v"-->
+<!--        android:layout_marginLeft="15dp"-->
+<!--        android:textSize="20sp"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"/>-->
     <View
         android:id="@+id/search_top_v"
         android:layout_width="match_parent"
-        android:layout_height="78dp"
+        android:layout_height="130dp"
         android:background="@drawable/home_background_top"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/search_back_bt"
@@ -25,20 +47,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="12dp"/>
-
     <TextView
         android:id="@+id/search_top_tv"
-        android:text="명지맛집"
-        android:textColor="@color/white"
-        android:fontFamily="@font/notosans_regular"
-        android:textFontWeight="700"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/search_top_v"
-        android:layout_marginLeft="15dp"
-        android:textSize="20sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:text="명지 맛집"
+        android:textColor="@color/white"
+        android:textFontWeight="700"
+        android:textSize="17sp"
+        android:layout_marginTop="27dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -66,13 +88,13 @@
 
     <ImageView
         android:id="@+id/search_ic_iv"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/ic_search"
-        app:layout_constraintBottom_toBottomOf="@id/search_top_v"
-        android:layout_marginRight="22dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="17dp"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/ic_search"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/search_top_tv" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/tl_search"
@@ -96,14 +118,15 @@
         android:id="@+id/search_myongji_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="25dp"
         android:scrollbars="vertical"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_top_v"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="25dp"
-        />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/good_cafe_drink_tv"
@@ -116,8 +139,8 @@
         android:textColor="#0E0E0E"
         app:layout_constraintTop_toBottomOf="@+id/search_top_v"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="-16dp"
         />
 
     <HorizontalScrollView
@@ -126,7 +149,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/good_cafe_drink_tv"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="10dp">
+        android:layout_marginStart="15dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -137,44 +160,45 @@
                 android:id="@+id/item_search_hashtag1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/search_hashtag"
+                android:background="@drawable/tag_stroke"
                 >
 
                 <TextView
                     android:id="@+id/hashtag_good_food"
                     android:text="#명지맛집"
                     android:textColor="#000000"
-                    android:paddingVertical="4dp"
-                    android:textSize="18sp"
+                    android:paddingVertical="8dp"
+                    android:textSize="16sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:paddingHorizontal="11dp"
+                    android:paddingHorizontal="12dp"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/item_search_hashtag2"
+                android:layout_marginStart="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/search_hashtag"
+                android:background="@drawable/tag_stroke"
                 >
 
                 <TextView
                     android:id="@+id/week_food_afternoon_tv1"
                     android:text="#명지카페"
                     android:textColor="#000000"
-                    android:paddingVertical="4dp"
-                    android:textSize="18sp"
+                    android:paddingVertical="8dp"
+                    android:textSize="16sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:paddingHorizontal="11dp"
+                    android:paddingHorizontal="12dp"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -183,45 +207,73 @@
                 android:id="@+id/item_search_hashtag3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/search_hashtag"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/tag_stroke"
                 >
 
                 <TextView
                     android:id="@+id/week_food_afternoon_tv2"
                     android:text="#명지술집"
                     android:textColor="#000000"
-                    android:paddingVertical="4dp"
-                    android:textSize="18sp"
+                    android:paddingVertical="8dp"
+                    android:textSize="16sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:paddingHorizontal="11dp"
+                    android:paddingHorizontal="12dp"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/item_search_hashtag4"
+                android:layout_marginStart="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/search_hashtag"
+                android:background="@drawable/tag_stroke"
                 >
 
                 <TextView
                     android:id="@+id/week_food_afternoon_tv3"
                     android:text="#명지빵집"
                     android:textColor="#000000"
-                    android:paddingVertical="4dp"
-                    android:textSize="18sp"
+                    android:paddingVertical="8dp"
+                    android:textSize="16sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:paddingHorizontal="11dp"
+                    android:paddingHorizontal="12dp"
                     />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/item_search_hashtag5"
+                android:visibility="invisible"
+                android:layout_marginStart="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/tag_stroke"
+                >
+
+                <TextView
+                    android:id="@+id/week_food_afternoon_tv_plus"
+                    android:text="#"
+                    android:visibility="invisible"
+                    android:textColor="#000000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:paddingHorizontal="12dp"
+                    />
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -242,7 +294,7 @@
         app:layout_constraintTop_toBottomOf="@id/horizon_sv"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         />
 
     <androidx.recyclerview.widget.RecyclerView
