--- a/app/src/main/res/layout/fragment_tag.xml
+++ b/app/src/main/res/layout/fragment_tag.xml
@@ -7,25 +7,25 @@
     <View
         android:id="@+id/tag_top_v"
         android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:background="@drawable/home_background_top"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        android:layout_height="1.4dp"
+        android:background="@color/sub_color"
+        app:layout_constraintBottom_toBottomOf="@+id/tag_top_tv"
+         />
 
     <ImageView
         android:id="@+id/tag_back_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_ep_arrow_left"
+        android:src="@drawable/ic_back_tag"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="12dp"/>
+        android:layout_marginTop="27dp"
+        android:layout_marginStart="16dp"/>
 
     <TextView
         android:id="@+id/tag_top_tv"
-        android:text="#모아뒀으니 골라보세요!"
-        android:textColor="@color/white"
+        android:text="#명지 맛집"
+        android:textColor="@color/black"
         android:fontFamily="@font/notosans_regular"
         android:textFontWeight="700"
         android:textSize="20sp"
@@ -34,18 +34,17 @@
         app:layout_constraintTop_toTopOf="@id/tag_back_bt"
         app:layout_constraintBottom_toBottomOf="@id/tag_back_bt"
         app:layout_constraintLeft_toRightOf="@id/tag_back_bt"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="14dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/moa_myongji_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scrollbars="vertical"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tag_top_v"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="25dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tag_top_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
