--- a/app/src/main/res/layout/item_restaurant_food.xml
+++ b/app/src/main/res/layout/item_restaurant_food.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/home_food_stroke"
-    android:layout_marginHorizontal="10dp">
+    android:layout_marginHorizontal="16dp"
+    android:paddingTop="1dp"
+    android:layout_marginBottom="11dp">
 
     <TextView
         android:id="@+id/item_food_name"
@@ -17,8 +19,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textColor="#000000"
-        android:textSize="16sp"
-        android:layout_marginLeft="13dp"
+        android:textSize="20sp"
+        android:layout_marginStart="16dp"
         />
 
     <ImageView
@@ -66,7 +68,21 @@
         app:layout_constraintTop_toTopOf="@id/week_food_afternoon_tv"
         app:layout_constraintBottom_toBottomOf="@id/week_food_afternoon_tv"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="13dp"
+        android:layout_marginEnd="16dp"
+        android:paddingBottom="5dp"
+        />
+
+    <ImageView
+        android:id="@+id/item_food_love_fill_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_food_love_fill"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/week_food_afternoon_tv"
+        app:layout_constraintBottom_toBottomOf="@id/week_food_afternoon_tv"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp"
+        android:paddingBottom="5dp"
         />
 
     <ImageView
@@ -76,8 +92,8 @@
         android:src="@drawable/ic_place"
         app:layout_constraintTop_toBottomOf="@id/item_food_name"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="-5dp"/>
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="1dp"/>
 
     <TextView
         android:id="@+id/item_food_location_tv"
@@ -99,8 +115,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="20dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="9dp"
+        android:paddingTop="3dp"
         />
 
     <TextView
@@ -138,12 +155,13 @@
             android:id="@+id/item_food_detail_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingVertical="5dp"
-            android:paddingLeft="11dp"
-            android:paddingRight="20dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="6dp"
+            android:paddingStart="13dp"
+            android:paddingEnd="22dp"
             android:text="바로 가기"
             android:textColor="@color/white"
-            android:textSize="13sp"
+            android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
