자연캠 리스너 변경

--- a/app/src/main/res/layout/fragment_love.xml
+++ b/app/src/main/res/layout/fragment_love.xml
@@ -17,6 +17,7 @@
 
     <ImageView
         android:id="@+id/love_back_bt"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_ep_arrow_left"
