--- a/app/src/main/res/layout/fragment_love.xml
+++ b/app/src/main/res/layout/fragment_love.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/love_top_v"
         android:layout_width="match_parent"
-        android:layout_height="78dp"
+        android:layout_height="130dp"
         android:background="@drawable/home_background_top"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -28,17 +28,18 @@
 
     <TextView
         android:id="@+id/tag_top_tv"
-        android:text="나만의 찜꽁리스트"
-        android:textColor="@color/white"
-        android:fontFamily="@font/notosans_regular"
-        android:textFontWeight="700"
-        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/love_back_bt"
-        app:layout_constraintBottom_toBottomOf="@id/love_back_bt"
-        app:layout_constraintLeft_toRightOf="@id/love_back_bt"
-        android:layout_marginLeft="10dp"/>
+        android:fontFamily="@font/notosans_regular"
+        android:text="찜콩 리스트"
+        android:textColor="@color/white"
+        android:textFontWeight="700"
+        android:textSize="16sp"
+        android:layout_marginTop="27dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    />
 
     <TextView
         android:id="@+id/favorite_empty_love"
