--- a/app/src/main/res/layout/item_love_restaurant.xml
+++ b/app/src/main/res/layout/item_love_restaurant.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/love_food_stroke"
+    android:background="@drawable/home_food_stroke"
+    android:layout_marginHorizontal="16dp"
     android:layout_marginBottom="8dp"
     >
 
@@ -14,12 +15,13 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosans_regular"
         android:textFontWeight="700"
+        android:includeFontPadding="false"
+        android:paddingVertical="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:paddingVertical="20dp"
         android:textColor="#000000"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:layout_marginLeft="20dp"
         />
 
