--- a/app/src/main/res/layout/fragment_select_home.xml
+++ b/app/src/main/res/layout/fragment_select_home.xml
@@ -18,15 +18,12 @@
         android:id="@+id/select_home_top_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosans_regular"
-        android:text="오늘의 학식"
-        android:textColor="@color/white"
-        android:textFontWeight="700"
-        android:textSize="16sp"
+        android:background="@drawable/new_logo_top"
         android:layout_marginTop="27dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/select_home_banner_iv"
@@ -82,8 +79,8 @@
         android:id="@+id/select_home_staff_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:text="운영시간"
+        android:layout_marginTop="-4dp"
+        android:text="운영시간\n중식 11:30~13:30 | 석식 17:30 ~ 18:30"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:paddingBottom="35dp"
@@ -147,8 +144,8 @@
         android:id="@+id/select_home_life_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:text="운영시간"
+        android:layout_marginTop="-4dp"
+        android:text="운영시간\n중식 11:30~13:30 | 석식 17:00 ~ 18:30"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:paddingBottom="35dp"
