--- a/app/src/main/res/layout/item_home_today_food.xml
+++ b/app/src/main/res/layout/item_home_today_food.xml
@@ -47,14 +47,14 @@
         android:id="@+id/today_food_1"
         android:textColor="#717171"
         android:text="베이컨김치볶음밥 후라이 맑은우동국물 피쉬앤칩스 케찹 단무지 배추김치"
-        android:maxLines="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosans_regular"
         android:textAlignment="center"
-        android:paddingHorizontal="38dp"
+        android:paddingHorizontal="32dp"
         android:layout_marginTop="3dp"
         android:breakStrategy="high_quality"
+        android:maxLines="3"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/today_day_lunch_a"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -153,6 +153,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/today_lunch_b_line_iv"
         app:layout_constraintTop_toBottomOf="@id/home_lunch_a_v"
         android:layout_marginTop="20dp"
+
          />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/today_day_lunch_b"
@@ -160,6 +161,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        app:layout_constrainedWidth="true"
         android:background="@drawable/home_food_stroke_category"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/home_lunch_b_v">
@@ -183,15 +185,16 @@
     <TextView
         android:id="@+id/today_food_lunch_b"
         android:text="베이컨김치볶음밥 후라이 맑은우동국물 피쉬앤칩스 케찹 단무지 배추김치"
-        android:maxLines="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
         android:fontFamily="@font/notosans_regular"
         android:textColor="#717171"
         android:textAlignment="center"
-        android:paddingHorizontal="38dp"
-        android:layout_marginTop="3dp"
+        android:paddingHorizontal="32dp"
         android:breakStrategy="high_quality"
+        android:maxLines="3"
+        android:layout_marginTop="3dp"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/today_day_lunch_b"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -324,15 +327,15 @@
     <TextView
         android:id="@+id/today_food_afternoon"
         android:text="베이컨김치볶음밥 후라이 맑은우동국물 피쉬앤칩스 케찹 단무지 배추김치"
-        android:maxLines="2"
+        android:breakStrategy="high_quality"
+        android:maxLines="3"
         android:layout_width="wrap_content"
         android:textColor="#717171"
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosans_regular"
         android:textAlignment="center"
-        android:paddingHorizontal="38dp"
+        android:paddingHorizontal="32dp"
         android:layout_marginTop="3dp"
-        android:breakStrategy="high_quality"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/today_day_afternoon"
         app:layout_constraintLeft_toLeftOf="parent"
