--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,11 +53,7 @@
                     android:id="@+id/home_top_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosans_regular"
-                    android:text="오늘의 학식"
-                    android:textColor="@color/white"
-                    android:textFontWeight="700"
-                    android:textSize="16sp"
+                    android:background="@drawable/new_logo_top"
                     android:layout_marginTop="27dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -80,6 +76,7 @@
                     android:layout_height="wrap_content"
                     android:text="오늘의 학식 │  "
                     android:textSize="20sp"
+                    android:layout_marginTop="-17dp"
                     android:textFontWeight="700"
                     android:textColor="#033DAB"
                     android:fontFamily="@font/notosans_regular"
@@ -92,6 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="00월 00일"
+                    android:layout_marginTop="-17dp"
                     android:textSize="20sp"
                     android:textFontWeight="700"
                     android:textColor="#033DAB"
@@ -152,7 +150,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager2"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/home_time_tv"
         android:layout_marginTop="10dp"/>
 
@@ -166,6 +164,7 @@
         app:ci_height="7dp"
         app:ci_width="7dp"
         app:ci_margin="8dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/view_pager2"
         />
 
